---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: ????
  Features:
    - Add preset addons: Small mods that can be used with any other major mod can now have preset milestones, which will be detected and added at the end of the major mod preset.
    - Add preset addons: Power Armor Mk3, Space Extension (SpaceX) 
  Changes:
    - Add missing holmium ingot to SE preset
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2021-06-27
  Bugfixes:
    - Fix multiplayer desync when a player joins before Milestones' intro message
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2021-06-23
  Features:
    - Add presets: Industrial Revolution 2, Seablock
  Changes:
    - Tweak Angel presets to account for changes when using "industry overhaul"
  Bugfixes:
    - Fix crash when trying to confirm settings with invalid items
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2021-06-13
  Features:
    - Add presets: K2, SE+K2, Bob's, Angel's, B&A, Pyanodon's (with and without AlienLife)
  Changes:
    - Fix missing items in Vanilla presets
    - Add "significant data" to SE preset
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2021-06-06
  Features:
    - Initial release