@@ -37,6 +37,12 @@ settings_instructions=Settings
 settings_disabled=Settings (Requires "Mod Settings Changed" permissions)
 pin_instructions=Keep open
 settings_title=Milestones settings
+settings_import_title=Import settings
+settings_export_title=Export settings
+settings_preset=Preset:
+settings_imported=Imported
+settings_import=Import
+settings_export=Export
 settings_back=Back
 settings_confirm=Confirm
 settings_add_item=Add Item
@@ -52,3 +58,4 @@ message_milestone_reached_item_first=[img=milestones_main_icon_white] [font=defa
 message_milestone_reached_item_more=[img=milestones_main_icon_white] [font=default-large-bold]Created [color=green]__1__ [img=__2__]__3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
 message_milestone_reached_technology=[img=milestones_main_icon_white] [font=default-large-bold]Researched [color=green][img=__1__]__2____3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
 message_settings_permission_denied=Cannot change Milestones settings. You need "Mod Settings Changed" permissions.
+message_invalid_import=Invalid import string. You must paste a valid JSON string.
