@@ -2,8 +2,9 @@
 Version: 1.0.4
 Date: ????
   Features:
+    - Add settings import/export. Useful if you want to mass-edit your milestones in a text editor, or quickly import something from another save.
     - Add preset addons: Small mods that can be used with any other major mod can now have preset milestones, which will be detected and added at the end of the major mod preset.
-    - Add preset addons: Power Armor Mk3, Space Extension (SpaceX) 
+    - Add preset addons: Power Armor Mk3, Space Extension (SpaceX)
   Changes:
     - Add missing holmium ingot to SE preset
 ---------------------------------------------------------------------------------------------------
